# SYNE

./: README.md  pyproject.toml
examples/: compare_with_mutation.py  pole_balancing.py  xor.py
research/: FINDINGS.md  benchmark_comparison.py  generate_figures.py  neat_config.txt  pole_benchmark.py  pole_config.txt
research/data/: neat_results.json  pole_results.json  syne_results.json
syne/: __init__.py  genome.py  innovation.py  nn.py  population.py  reproduction.py  species.py  visualization.py
syne_v2/: __init__.py  config.py  genome.py  nn.py  population.py  reproduction.py  species.py  visualization.py
syne_v5/: __init__.py  config.py  genome.py  innovation.py  nn.py  population.py  reproduction.py  species.py  test_basic.py
